# Siegmund-GB

./: .gitignore  CMakeLists.txt
include/: ZGBMain.h
res/: map.gbm  tiles.gbr
res/sprites/: player.gbr  skeleton.gbr  skeleton_big.gbr
src/: Makefile  SpriteAttack.c  SpritePlayer.c  SpriteSkeleton.c  StateGame.c  ZGBMain.c
